# IDTA-AAS-Fibro

./: Makefile  README.md  basyx-infra.yml  docker-compose-teamb.yml  docker-compose.yml  example.json  generate_aas.py  pyproject.toml  requirements.txt
client/: client.py
config/aas-environment/: application.properties
config/teamB/: application.properties  basyx-infra.yml
data/input/: DPP_FIBROTOR_ER15_V2.xlsx
data/xlsx/: Carbon Footprint_generated.json  DPP_FIBROTOR_ER15_V2.xlsx  DigitalNameplate_generated.json  Handover Documentation_generated.json  Maintenance Instructions_generated.json  Technical Data_generated.json  data_processing.ipynb  data_processing_v2.ipynb  final_basyx_aas_environment.json  finaltemplate.aasx  output.json  output_carbon_footprint.json  output_digital_nameplate.json  output_handover_documentation.json  output_maintenance_instructions.json  (+1 more)
dpp_aas/: __init__.py  aasx.py  cli.py  client.py  config.py  environment.py  pipeline.py  render_security_config.py  security_gateway.py  templates.py  values.py  workbook.py
dpp_aas_generator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
frontend/: Dockerfile  package-lock.json  package.json
import-api/: Dockerfile  main.py  requirements.txt
scripts/: test_distributed_aas.py
security/: Dockerfile  basyx-infra.yml.template  entrypoint.sh
tests/: __init__.py  test_client.py  test_connection_other_teams.py  test_distributed_aas.py  test_exchange_information.py  test_pipeline.py  test_security.py  test_templates.py  test_values.py
(+17 files in other folders)
