[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dpp-aas-generator"
version = "0.1.0"
description = "Generate an Asset Administration Shell environment from the FIBROTOR DPP workbook."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "basyx-python-sdk==1.0.0",
    "openpyxl>=3.1,<4",
    "requests>=2.31,<3",
]

[project.scripts]
dpp-aas = "dpp_aas.cli:main"

[tool.setuptools.packages.find]
include = ["dpp_aas*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
